Added starting webster with example providers, added Rio deployment descriptor to archetype

--- a/examples/ex6/ex6-prv/src/main/resources/config/start-all-beans.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/start-all-beans.config
@@ -13,6 +13,7 @@ com.sun.jini.start {
 	ps = System.getProperty("path.separator");
 	
     serviceDescriptors = new ServiceDescriptor[] {
+        SorcerDescriptorUtil.getWebster(policy, 0, new String[] { Resolver.getRootDir(), Resolver.getRepoDir() }),
 
         new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex6-api")
