--- a/examples/ex6/ex6-prv/src/main/resources/config/start-all-prvs.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/start-all-prvs.config
@@ -1,12 +1,17 @@
 import com.sun.jini.start.ServiceDescriptor;
 import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerServiceDescriptor;
+import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.core.SorcerEnv;
+import sorcer.resolver.Resolver;
 
 com.sun.jini.start {
 	policy = "${java.security.policy}";
 
 	serviceDescriptors = new ServiceDescriptor[] {
+
+	    SorcerDescriptorUtil.getWebster(policy, 0, new String[] { Resolver.getRootDir(), Resolver.getRepoDir() }),
+
 		new SorcerServiceDescriptor(
 			Booter.resolveCodebase(new String[]{
  				"org.sorcersoft.sorcer:ex6-api",
