--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/__providerInterface__.config
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/__providerInterface__.config
@@ -28,7 +28,7 @@ sorcer.core.provider.ServiceProvider {
 		UIDescriptorFactory.getUIDescriptor(
 			MainUI.ROLE,
 			new UIComponentFactory(
-				new URL(Booter.resolveCodebase("${package}:${rootArtifactId}-sui:${version}")),
+				new URL(Booter.resolveCodebase("${groupId}:${rootArtifactId}-sui:${version}")),
 			 	"${package}.${providerClass}UI"
 			)
 		)
