--- a/examples/ex1/ex1-prv/src/main/resources/config/start-services.config
+++ b/examples/ex1/ex1-prv/src/main/resources/config/start-services.config
@@ -15,7 +15,8 @@ com.sun.jini.start {
     serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up 10 directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug, boolean isDaemon)
-        // SorcerDescriptorUtil.getWebster(policy),
+
+        SorcerDescriptorUtil.getWebster(policy, 0, new String[] { Resolver.getRootDir(), Resolver.getRepoDir() }),
 
         new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex1-api")
