--- a/examples/ex5/ex5-prv/src/main/resources/config/start-all-beans.config
+++ b/examples/ex5/ex5-prv/src/main/resources/config/start-all-beans.config
@@ -14,6 +14,9 @@ com.sun.jini.start {
 	
     serviceDescriptors = new ServiceDescriptor[] {
 
+        SorcerDescriptorUtil.getWebster(policy, 0, new String[] { Resolver.getRootDir(), Resolver.getRepoDir() }),
+
+
         new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex5-api")
  			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
