--- a/examples/ex5/ex5-prv/src/main/resources/config/start-all-prvs.config
+++ b/examples/ex5/ex5-prv/src/main/resources/config/start-all-prvs.config
@@ -11,8 +11,11 @@ com.sun.jini.start {
 	home = "${sorcer.home}";
 	policy = "${java.security.policy}";
 	ps = System.getProperty("path.separator");
-	
+    port = 0;
+
     serviceDescriptors = new ServiceDescriptor[] {
+
+        SorcerDescriptorUtil.getWebster(policy, port, new String[] { Resolver.getRootDir(), Resolver.getRepoDir() }),
 
         new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex5-api")
