--- a/examples/ex6/ex6-prv/src/main/resources/config/start-bean.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/start-bean.config
@@ -14,6 +14,8 @@ com.sun.jini.start {
 	
     serviceDescriptors = new ServiceDescriptor[] {
 
+        SorcerDescriptorUtil.getWebster(policy, 0, new String[] { Resolver.getRootDir(), Resolver.getRepoDir() }),
+
         new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex6-api")
  			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:ex6-sui")
