--- a/sos/sorcer-api/pom.xml
+++ b/sos/sorcer-api/pom.xml
@@ -42,6 +42,17 @@
             <version>${v.jini}</version>
         </dependency>
 <!-- -->
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${v.slf4j}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
