--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -174,6 +174,7 @@ com.sun.jini.start {
                 "net.jini.lookup:serviceui",
                 "org.sorcersoft.sorcer:sos-platform",
                 "org.sorcersoft.sorcer:sos-exertlet-sui",
+                "org.sorcersoft.sorcer:sos-netlet",
                 "org.sorcersoft.sorcer:logger-sui"
             }),
             policy,
@@ -204,7 +205,9 @@ com.sun.jini.start {
         new SorcerServiceDescriptor(
             Booter.resolveCodebase(new String[]{
 				"org.sorcersoft.sorcer:sorcer-api",
-				"org.sorcersoft.sorcer:dbp-api"
+				"org.sorcersoft.sorcer:dbp-api",
+				"org.sorcersoft.sorcer:sos-exertlet-sui",
+				"org.sorcersoft.sorcer:sos-netlet"
 			}),
             policy,
             Booter.resolveClasspath(new String[]{
