--- a/pom.xml
+++ b/pom.xml
@@ -284,7 +284,7 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.bitstrings.maven.plugins</groupId>
 				<artifactId>dependencypath-maven-plugin</artifactId>
 				<version>1.1.1</version>
@@ -306,7 +306,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin>-->
 			<plugin>
 				<groupId>com.mycila.maven-license-plugin</groupId>
 				<artifactId>maven-license-plugin</artifactId>
