--- a/sos/sos-platform/pom.xml
+++ b/sos/sos-platform/pom.xml
@@ -39,6 +39,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>cataloger-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-util</artifactId>
 			<version>${project.version}</version>
