[config] fix cataloger and dbp

--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -156,12 +156,15 @@ com.sun.jini.start {
 
         // SORCER Catalog Service
         new SorcerServiceDescriptor(
-            standardProviderCodebase,
+            Booter.resolveCodebase(
+            	"org.sorcersoft.sorcer:cataloger-api"
+            ),
             policy,
             Booter.resolveClasspath(new String[]{
                 "org.sorcersoft.sorcer:commons-prv",
                 "org.sorcersoft.sorcer:cataloger-prv",
-                "org.sorcersoft.sorcer:cataloger-sui"
+            	"org.sorcersoft.sorcer:cataloger-api",
+            	"org.sorcersoft.sorcer:cataloger-sui"
             }),
             "sorcer.core.provider.cataloger.ServiceCataloger",
             new String[]{ home + "/configs/sos-providers/cataloger.config" }
@@ -216,7 +219,7 @@ com.sun.jini.start {
                 "org.sorcersoft.sorcer:dbp-api",
                 "com.sleepycat:je",
             }),
-            "sorcer.core.provider.dbp.DatabaseProvider",
+            "sorcer.core.provider.ServiceProvider",
             new String[]{ home + "/configs/sos-providers/dbp.config" }
         ),
 
