--- a/configs/sos-providers/dbp.config
+++ b/configs/sos-providers/dbp.config
@@ -34,6 +34,8 @@ sorcer.core.provider.ServiceProvider {
     spaceEnabled = false;
     		
     iconName="sorcer-ico.png";
+
+	beanClasses = new Class[] { sorcer.core.provider.dbp.DatabaseProvider.class };
 }
 	
 
