add util-rio - 2 classes helping with Rio OpStrings

--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -25,6 +25,7 @@
 		<module>sorcer-maven-plugin</module>
 		<module>sorcer-provider</module>
 		<module>provider-root</module>
+        <module>util-rio</module>
 		<!-- force download implicit dependencies -->
 		<module>dependencies</module>
 	</modules>
