--- a/tools/provider-root/pom.xml
+++ b/tools/provider-root/pom.xml
@@ -19,7 +19,7 @@
     <inceptionYear>2013</inceptionYear>
 
     <properties>
-        <v.sorcer>${project.version}</v.sorcer>
+        <v.sorcer>1.0-M3-SNAPSHOT</v.sorcer>
         <v.jini>2.2.1</v.jini>
         <v.blitz>2.2.0</v.blitz>
         <v.sleepycat>4.1.21</v.sleepycat>
