Minor fixes in assembly and repolayout

--- a/sos/sos-env/src/main/resources/META-INF/maven/repolayout.properties
+++ b/sos/sos-env/src/main/resources/META-INF/maven/repolayout.properties
@@ -4,5 +4,7 @@ org.apache.river = river
 org.rioproject = rio
 org.rioproject.resolver = rio-resolver
 org.sorcersoft.sorcer = sorcer
+com.sorcersoft.sorcer = sorcer
+com.sorcersoft = sorcer
 org.sorcersoft.blitz = blitz
 org.sorcersoft.sigar = sigar
