--- a/tools/util-rio/pom.xml
+++ b/tools/util-rio/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-M3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <name>SORCER tools :: util-rio</name>
     <artifactId>util-rio</artifactId>
 
     <dependencies>
