Added support for provisioning in SpaceDispatchers, added debug to shell, fixes compat ant build

--- a/configs/shell/configs/nsh-init.config
+++ b/configs/shell/configs/nsh-init.config
@@ -19,7 +19,8 @@ sorcer.tools.shell.NetworkShell {
 	
 	discoveryTimeout = 5000L;
 	
-	httpPort = 9090;
+	//httpPort = 9090;
+	httpPort = 0;
 	
 	// webster root directories (codebase)
 	dataPath 	    = home + "${/}data";
@@ -31,6 +32,8 @@ sorcer.tools.shell.NetworkShell {
 	noHttp = false;
 	
 	output = System.out;
+
+	debug = false;
 	
 	//loginContext =  new LoginContext("sorcer.tools.shell.config.ShellLoginContext");
 	
