--- a/configs/sorcer.env
+++ b/configs/sorcer.env
@@ -10,7 +10,7 @@ sorcer.local.repo.location = ${user.home}/.m2/repository
 # use provider names suffixed with the OS user name
 sorcer.provider.name.suffixed = true
 # custom suffix for provider names
-#sorcer.provider.name.suffix = DEV
+sorcer.provider.name.suffix = DEV
 
 # Groups to register/lookup
 provider.groups=sorcer.TEST-DEV
