--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -305,6 +305,11 @@
             <artifactId>xercesImpl</artifactId>
             <version>2.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${v.junit}</version>
+        </dependency>
     </dependencies>
 
     <build>
