--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -228,6 +228,11 @@
             <artifactId>ex6-req</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>util-rio</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!--    rio -->
         <dependency>
