--- a/sos-providers/logger/logger-sui/pom.xml
+++ b/sos-providers/logger/logger-sui/pom.xml
@@ -24,6 +24,11 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>sos-exertlet-sui</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
