--- a/tools/sos-shell/pom.xml
+++ b/tools/sos-shell/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>dbp-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
