--- a/configs/sos-providers/spacer.config
+++ b/configs/sos-providers/spacer.config
@@ -24,9 +24,9 @@ sorcer.core.provider.ServiceProvider {
     exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
     
     //Exertion Space (JavaSpaces configuration)
-    spaceEnabled = false;
+    spaceEnabled = true;
     matchInterfaceOnly = false; 
-    //workerTransactional = false;
+    //workerTransactional = true;
     
     iconName="sorcer-ico.png";
 }
