Fixed problem with space jobs inside other space jobs

--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -86,7 +86,7 @@ com.sun.jini.start {
             "com.sun.jini.norm.TransientNormServerImpl",
             new String[] { home + "/configs/jini/configs/norm.config" }
         ),
-            
+
    		// Blitz
         new SorcerServiceDescriptor(
             Booter.resolveCodebase(new String[]{
@@ -142,7 +142,7 @@ com.sun.jini.start {
             new String[]{ home + "/configs/sos-providers/jobber.config" }
         ),
 
-        // SORCER Space Service
+        // SORCER Spacer Service
         new SorcerServiceDescriptor(
             standardProviderCodebase,
             policy,
@@ -203,7 +203,7 @@ com.sun.jini.start {
             "sorcer.core.provider.exertmonitor.ExertMonitor",
             new String[]{ home + "/configs/sos-providers/exertmonitor.config" }
         ),
-       			
+
         // SORCER Database Store Service
         new SorcerServiceDescriptor(
             Booter.resolveCodebase(new String[]{
