Enhanced groovy error reporting in NSH, removed unnecessary jars in common-run, fixed old configs in examples

--- a/examples/ex6/ex6-prv/src/main/resources/config/start-bean.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/start-bean.config
@@ -19,7 +19,7 @@ com.sun.jini.start {
         new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex6-api")
  			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:ex6-sui")
- 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sorcer-api"),
             policy,
             ConfigUtil.concat(new Object[] {
                 Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-api"), ps,
