--- a/examples/ex5/ex5-prv/src/main/resources/config/start-all-prvs.config
+++ b/examples/ex5/ex5-prv/src/main/resources/config/start-all-prvs.config
@@ -19,7 +19,7 @@ com.sun.jini.start {
 
         new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex5-api")
- 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sorcer-api"),
             policy,
             ConfigUtil.concat(new Object[] {
                 Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex5-api"), ps,
@@ -31,7 +31,7 @@ com.sun.jini.start {
 
 		new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex5-api")
- 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sorcer-api"),
             policy,
             ConfigUtil.concat(new Object[] {
                 Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex5-api"), ps,
@@ -43,7 +43,7 @@ com.sun.jini.start {
           	
        new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex5-api")
- 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sorcer-api"),
             policy,
             ConfigUtil.concat(new Object[] {
                 Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex5-api"), ps,
@@ -55,7 +55,7 @@ com.sun.jini.start {
 
        new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex5-api")
- 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sorcer-api"),
             policy,
             ConfigUtil.concat(new Object[] {
                 Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex5-api"), ps,
