--- a/examples/ex6/ex6-prv/src/main/resources/config/start-all-prvs.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/start-all-prvs.config
@@ -15,7 +15,7 @@ com.sun.jini.start {
 		new SorcerServiceDescriptor(
 			Booter.resolveCodebase(new String[]{
  				"org.sorcersoft.sorcer:ex6-api",
- 				"org.sorcersoft.sorcer:sos-platform"
+ 				"org.sorcersoft.sorcer:sorcer-api"
 			}),
 			policy,
 			Booter.resolveClasspath(new String[] {
@@ -29,7 +29,7 @@ com.sun.jini.start {
 		new SorcerServiceDescriptor(
  			Booter.resolveCodebase(new String[]{
  				"org.sorcersoft.sorcer:ex6-api",
- 				"org.sorcersoft.sorcer:sos-platform"
+ 				"org.sorcersoft.sorcer:sorcer-api"
 			}),
 			policy,
 			Booter.resolveClasspath(new String[] {
@@ -43,7 +43,7 @@ com.sun.jini.start {
 		new SorcerServiceDescriptor(
  			Booter.resolveCodebase(new String[]{
  				"org.sorcersoft.sorcer:ex6-api",
- 				"org.sorcersoft.sorcer:sos-platform",
+ 				"org.sorcersoft.sorcer:sorcer-api",
  			}),
 			policy,
 			Booter.resolveClasspath(new String[] {
@@ -57,7 +57,7 @@ com.sun.jini.start {
 		new SorcerServiceDescriptor(
  			Booter.resolveCodebase(new String[]{
  				"org.sorcersoft.sorcer:ex6-api",
- 				"org.sorcersoft.sorcer:sos-platform"
+ 				"org.sorcersoft.sorcer:sorcer-api"
 			}),
 			policy,
 			Booter.resolveClasspath(new String[] {
