--- a/tools/dependencies/pom.xml
+++ b/tools/dependencies/pom.xml
@@ -161,6 +161,11 @@
 			<version>1.0b3</version>
 		</dependency>
         <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-ant-tasks</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio-ui</artifactId>
             <version>${v.rio}</version>
