--- a/configs/sorcer.env
+++ b/configs/sorcer.env
@@ -67,3 +67,8 @@ requestor.root.dir=${sorcer.home}/data/requestor
 system.tmp.dir=${sorcer.home}/tmp
 system.webster.interface=${provider.webster.interface}
 system.webster.port=${provider.webster.port}
+
+
+aws.enable=true
+aws.key.access=AKIAILCZY3YJQ3FX5V5A
+aws.key.secret=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
