--- a/examples/ex6/ex6-req/pom.xml
+++ b/examples/ex6/ex6-req/pom.xml
@@ -42,11 +42,16 @@
             <artifactId>commons-req</artifactId>
             <version>${project.version}</version>
         </dependency>
-<!--        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-ant-tasks</artifactId>
-            <version>2.1.3</version>
-        </dependency>-->
+
+        <!-- Added temporarily for ExertionSorter tests -->
+        <dependency>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-utils</artifactId>
+            <version>3.0.15</version>
+        </dependency>
+
+        <!-- -->
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
