--- a/tools/dependencies/pom.xml
+++ b/tools/dependencies/pom.xml
@@ -15,6 +15,8 @@
 	<url>http://sorcersoft.org/</url>
 
 	<properties>
+        <rioLib>${env.SORCER_HOME}/lib/rio/lib</rioLib>
+        <rioLibResolver>${rioLib}/resolver</rioLibResolver>
 		<v.sigar>1.6.4</v.sigar>
         <v.commons_compress>1.5</v.commons_compress>
         <v.commons_collections>3.2.1</v.commons_collections>
@@ -191,4 +193,107 @@
             <version>2.1_3</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.8</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>
+                                copy
+                            </goal>
+                        </goals>
+                        <phase>pre-integration-test</phase>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.rioproject</groupId>
+                                    <artifactId>rio-start</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject</groupId>
+                                    <artifactId>rio-cli</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject</groupId>
+                                    <artifactId>rio-lib</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject</groupId>
+                                    <artifactId>webster</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject</groupId>
+                                    <artifactId>rio-platform</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject</groupId>
+                                    <artifactId>rio-ui</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject.monitor</groupId>
+                                    <artifactId>monitor-service</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject.gnostic</groupId>
+                                    <artifactId>gnostic-service</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject.cybernode</groupId>
+                                    <artifactId>cybernode-service</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject.resolver</groupId>
+                                    <artifactId>resolver-api</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject.resolver</groupId>
+                                    <artifactId>resolver-aether</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLibResolver}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject.resolver</groupId>
+                                    <artifactId>resolver-project</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLibResolver}</outputDirectory>
+                                </artifactItem>
+
+                                <!-- bin/rio -->
+                                <artifactItem>
+                                    <groupId>org.codehaus.groovy</groupId>
+                                    <artifactId>groovy-all</artifactId>
+                                    <version>${v.groovy}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
