--- a/tools/dependencies/pom.xml
+++ b/tools/dependencies/pom.xml
@@ -17,7 +17,8 @@
 	<properties>
         <rioLib>${env.SORCER_HOME}/lib/rio/lib</rioLib>
         <rioLibResolver>${rioLib}/resolver</rioLibResolver>
-		<v.sigar>1.6.4</v.sigar>
+        <rioLibDl>${rioLib}-dl</rioLibDl>
+        <rioLibLog>${rioLib}/logging</rioLibLog>
         <v.commons_compress>1.5</v.commons_compress>
         <v.commons_collections>3.2.1</v.commons_collections>
 	</properties>
@@ -270,6 +271,43 @@
                                     <outputDirectory>${rioLib}</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
+                                    <groupId>org.codehaus.groovy</groupId>
+                                    <artifactId>groovy-all</artifactId>
+                                    <version>${v.groovy}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.jini</groupId>
+                                    <artifactId>jsk-lib</artifactId>
+                                    <version>${v.jini}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.jini</groupId>
+                                    <artifactId>jsk-platform</artifactId>
+                                    <version>${v.jini}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.jini</groupId>
+                                    <artifactId>jsk-resources</artifactId>
+                                    <version>${v.jini}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.river</groupId>
+                                    <artifactId>reggie</artifactId>
+                                    <version>${v.jini}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.river</groupId>
+                                    <artifactId>start</artifactId>
+                                    <version>${v.jini}</version>
+                                    <outputDirectory>${rioLib}</outputDirectory>
+                                </artifactItem>
+
+                                <artifactItem>
                                     <groupId>org.rioproject.resolver</groupId>
                                     <artifactId>resolver-aether</artifactId>
                                     <version>${v.rio}</version>
@@ -282,12 +320,96 @@
                                     <outputDirectory>${rioLibResolver}</outputDirectory>
                                 </artifactItem>
 
-                                <!-- bin/rio -->
                                 <artifactItem>
-                                    <groupId>org.codehaus.groovy</groupId>
-                                    <artifactId>groovy-all</artifactId>
-                                    <version>${v.groovy}</version>
-                                    <outputDirectory>${rioLib}</outputDirectory>
+                                    <groupId>org.rioproject.cybernode</groupId>
+                                    <artifactId>cybernode-api</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLibDl}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject.cybernode</groupId>
+                                    <artifactId>cybernode-proxy</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLibDl}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject.cybernode</groupId>
+                                    <artifactId>cybernode-ui</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLibDl}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject.event-collector</groupId>
+                                    <artifactId>event-collector-api</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLibDl}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject.event-collector</groupId>
+                                    <artifactId>event-collector-proxy</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLibDl}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject.gnostic</groupId>
+                                    <artifactId>gnostic-api</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLibDl}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject</groupId>
+                                    <artifactId>watch-ui</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLibDl}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.rioproject</groupId>
+                                    <artifactId>rio-api</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLibDl}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.jini.lookup</groupId>
+                                    <artifactId>jmx-lookup</artifactId>
+                                    <version>2.1</version>
+                                    <outputDirectory>${rioLibDl}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.jini</groupId>
+                                    <artifactId>jsk-dl</artifactId>
+                                    <version>${v.jini}</version>
+                                    <outputDirectory>${rioLibDl}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.river</groupId>
+                                    <artifactId>reggie-dl</artifactId>
+                                    <version>${v.jini}</version>
+                                    <outputDirectory>${rioLibDl}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>net.jini.lookup</groupId>
+                                    <artifactId>serviceui</artifactId>
+                                    <version>${v.jini}</version>
+                                    <outputDirectory>${rioLibDl}</outputDirectory>
+                                </artifactItem>
+
+                                <artifactItem>
+                                    <groupId>org.rioproject</groupId>
+                                    <artifactId>rio-logging-support</artifactId>
+                                    <version>${v.rio}</version>
+                                    <outputDirectory>${rioLibLog}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>ch.qos.logback</groupId>
+                                    <artifactId>logback-classic</artifactId>
+                                    <version>${v.logback}</version>
+                                    <outputDirectory>${rioLibLog}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>ch.qos.logback</groupId>
+                                    <artifactId>logback-core</artifactId>
+                                    <version>${v.logback}</version>
+                                    <outputDirectory>${rioLibLog}</outputDirectory>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
