fix class paths

--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -94,7 +94,8 @@ com.sun.jini.start {
                 "org.sorcersoft.blitz:blitz-proxy",
                 "net.jini.lookup:jmx-lookup",
                 "org.apache.river:outrigger-dl",
- 			    "org.sorcersoft.blitz:blitz-ui"
+ 			    "org.sorcersoft.blitz:blitz-ui",
+ 			    "org.rioproject:rio-ui"
             }),
             policy,
             Booter.resolveClasspath(new String[]{
@@ -107,7 +108,9 @@ com.sun.jini.start {
                 "net.jini.lookup:jmx-lookup",
             	"net.jini.lookup:serviceui",
             	"net.jini:jsk-lib",
-            	"net.jini:jsk-platform"
+            	"net.jini:jsk-platform",
+				"org.rioproject:rio-ui"
+
             }),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
           	new String[] { home + "/configs/blitz/configs/blitz.config" }
