Changed Rio version to 5.0-M4-sorcer3 - fixes resulting from that

--- a/tools/dependencies/pom.xml
+++ b/tools/dependencies/pom.xml
@@ -184,6 +184,11 @@
             <version>${v.rio}</version>
         </dependency>
         <dependency>
+            <groupId>org.rioproject.monitor</groupId>
+            <artifactId>monitor-proxy</artifactId>
+            <version>${v.rio}</version>
+        </dependency>
+        <dependency>
             <groupId>org.rioproject.cybernode</groupId>
             <artifactId>cybernode-service</artifactId>
             <version>${v.rio}</version>
