Ex6 f5xS and f5xP examples adopted to demoing transactionality

--- a/examples/ex6/ex6-prv/src/main/resources/config/beans-prv.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/beans-prv.config
@@ -34,6 +34,8 @@ sorcer.core.provider.ServiceProvider {
 			new Comment("It uses sorcer.arithmetic.Arithmometer for bean implementation") };
 			
 		spaceEnabled = true;
+		workerTransactional = true;
+        workerCount = 30;
 		matchInterfaceOnly = true;
 		
 		// persist and reuse service ID
