Multiple fixes, tests are working now

--- a/configs/rio/logging/rio-logging.properties
+++ b/configs/rio/logging/rio-logging.properties
@@ -97,5 +97,4 @@ org.rioproject.gnostic.level = INFO
 
 net.jini.discovery.LookupDiscovery.level=OFF
 net.jini.lookup.JoinManager.level=OFF
-
-
+com.sorcersoft.almanac.level=INFO
