--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -94,8 +94,7 @@ com.sun.jini.start {
                 "org.sorcersoft.blitz:blitz-proxy",
                 "net.jini.lookup:jmx-lookup",
                 "org.apache.river:outrigger-dl",
- 			    "org.sorcersoft.blitz:blitz-ui",
- 			    "org.rioproject:rio-ui"
+ 			    "org.sorcersoft.blitz:blitz-ui"
             }),
             policy,
             Booter.resolveClasspath(new String[]{
@@ -108,9 +107,7 @@ com.sun.jini.start {
                 "net.jini.lookup:jmx-lookup",
             	"net.jini.lookup:serviceui",
             	"net.jini:jsk-lib",
-            	"net.jini:jsk-platform",
-				"org.rioproject:rio-ui"
-
+            	"net.jini:jsk-platform"
             }),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
           	new String[] { home + "/configs/blitz/configs/blitz.config" }
