--- a/configs/blitz/configs/blitz.config
+++ b/configs/blitz/configs/blitz.config
@@ -21,8 +21,10 @@ import org.dancres.blitz.config.Transient;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 //import org.dancres.blitz.serviceui.DashboardUI;
-import org.rioproject.entry.UIDescriptorFactory;
-import org.rioproject.serviceui.UIFrameFactory;
+//import org.rioproject.entry.UIDescriptorFactory;
+import sorcer.ui.serviceui.UIDescriptorFactory;
+//import org.rioproject.serviceui.UIFrameFactory;
+import sorcer.ui.serviceui.UIFrameFactory;
 import net.jini.lookup.ui.MainUI;
 import java.net.URL;
 
