--- a/configs/sorcer-boot-no-http.config
+++ b/configs/sorcer-boot-no-http.config
@@ -81,16 +81,23 @@ com.sun.jini.start {
    		// Blitz
         new SorcerServiceDescriptor(
             Booter.resolveCodebase(new String[]{
-                "org.dancres.blitz:blitz-dl",
- 			    "org.dancres.blitz:blitzui"
+                "org.sorcersoft.blitz:blitz-common",
+                "org.sorcersoft.blitz:blitz-proxy",
+                "net.jini.lookup:jmx-lookup",
+                "org.apache.river:outrigger-dl",
+ 			    "org.sorcersoft.blitz:blitz-ui"
             }),
             policy,
             Booter.resolveClasspath(new String[]{
-            	"org.dancres.blitz:blitz",
-            	"org.dancres.blitz:blitzui",
-            	"com.sleepycat:je",
-            	"net.jini.lookup:serviceui",
+                "org.sorcersoft.blitz:blitz-common",
+                "org.sorcersoft.blitz:blitz-service",
+                "org.sorcersoft.blitz:blitz-proxy",
+            	"org.sorcersoft.blitz:blitz-ui",
             	"org.apache.river:outrigger-dl",
+            	"com.sleepycat:je",
+                "net.jini.lookup:jmx-lookup",
+            	"net.jini.lookup:serviceui",
+            	"net.jini:jsk-lib",
             	"net.jini:jsk-platform"
             }),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
