--- a/tools/sos-boot/pom.xml
+++ b/tools/sos-boot/pom.xml
@@ -49,10 +49,20 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio-lib</artifactId>
+            <version>${v.rio}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>util-rio</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.rioproject.resolver</groupId>
