Minor fixes in the OpString booter implementation

--- a/examples/ex0/ex0-deploy/pom.xml
+++ b/examples/ex0/ex0-deploy/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>ex0-deploy</artifactId>
+    <name>SORCER :: ex0 :: deploy</name>
 
     <dependencies>
         <dependency>
