create new module sorcer-rio; move all config files from lib/rio to sorcer-rio/.../resources; move maven-dependency-plugin configuration that copies rio libs to sorcer-rio; remove directory lib/rio; new configuration build the same structure as lib/rio in target/rio - run with RIO_HOME=$SORCER_HOME/target/rio

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -33,7 +33,7 @@
                     <version>2.14.1</version>
 					<configuration>
 						<systemPropertyVariables>
-							<RIO_HOME>${env.SORCER_HOME}/lib/rio</RIO_HOME>
+							<RIO_HOME>${env.SORCER_HOME}/target/rio</RIO_HOME>
 							<buildDirectory>${project.build.directory}</buildDirectory>
 						</systemPropertyVariables>
 					</configuration>
