--- a/tools/provider-root/pom.xml
+++ b/tools/provider-root/pom.xml
@@ -141,7 +141,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <systemPropertyVariables>
-                        <RIO_HOME>${env.SORCER_HOME}/lib/rio</RIO_HOME>
+                        <RIO_HOME>${env.SORCER_HOME}/target/rio</RIO_HOME>
                         <buildDirectory>${project.build.directory}</buildDirectory>
                     </systemPropertyVariables>
                 </configuration>
