disable testing with sorcer-maven-plugin - problem with maven versions and packages (sonatype vs apache)

--- a/tests/ju-arithmetic/ju-arithmetic-api/pom.xml
+++ b/tests/ju-arithmetic/ju-arithmetic-api/pom.xml
@@ -16,5 +16,6 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
         	<version>${project.version}</version>
-        </dependency>    </dependencies>
+        </dependency>
+    </dependencies>
 </project>
