--- a/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
@@ -84,6 +84,7 @@
 			<id>run-its</id>
 			<build>
 				<plugins>
+<!--
 					<plugin>
 						<groupId>org.sorcersoft.sorcer</groupId>
 						<artifactId>sorcer-maven-plugin</artifactId>
@@ -114,7 +115,7 @@
 										<param>
 											<mainClass>junit.sorcer.core.provider.ArithmeticNetTest</mainClass>
 											<codebase>
-												<!--<param>${project.groupId}:${project.artifactId}:${project.version}</param>-->
+												&lt;!&ndash;<param>${project.groupId}:${project.artifactId}:${project.version}</param>&ndash;&gt;
 												<param>org.sorcersoft.sorcer:sos-platform:${project.version}</param>
 												<param>org.sorcersoft.sorcer:ju-arithmetic-api:${project.version}</param>
 											</codebase>
@@ -136,6 +137,7 @@
 							</execution>
 						</executions>
 					</plugin>
+-->
 				</plugins>
 			</build>
 		</profile>
