--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,11 @@
                 <version>${v.logback}</version>
                 <scope>runtime</scope>
             </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.4</version>
+            </dependency>
 		</dependencies>
 	</dependencyManagement>
 
