--- a/tools/sos-boot/pom.xml
+++ b/tools/sos-boot/pom.xml
@@ -90,6 +90,10 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+        </dependency>
 
 	</dependencies>
 
