[pom] rename ex project names to include :: examples ::

--- a/examples/ex0/ex0-api/pom.xml
+++ b/examples/ex0/ex0-api/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
 	<artifactId>ex0-api</artifactId>
-	<name>SORCER :: ex0 :: API</name>
+	<name>SORCER :: examples :: ex0 :: API</name>
 
 	<dependencies>
 		<dependency>
