--- a/examples/ex2/ex2-cfg1/pom.xml
+++ b/examples/ex2/ex2-cfg1/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>ex2-cfg1</artifactId>
-    <name>SORCER :: ex2 :: config1</name>
+    <name>SORCER :: examples :: ex2 :: config1</name>
 
     <dependencies>
         <dependency>
