--- a/examples/ex5/ex5-cfg1/pom.xml
+++ b/examples/ex5/ex5-cfg1/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>ex5-cfg1</artifactId>
-    <name>SORCER :: ex5 :: config1</name>
+    <name>SORCER :: examples :: ex5 :: config1</name>
 
     <dependencies>
         <dependency>
