--- a/pom.xml
+++ b/pom.xml
@@ -524,9 +524,17 @@
             <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.8</version>
+                    <version>2.9</version>
                     <inherited>false</inherited>
                     <configuration>
+                        <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
+                        <docletArtifact>
+                            <groupId>org.umlgraph</groupId>
+                            <artifactId>umlgraph</artifactId>
+                            <version>5.6</version>
+                        </docletArtifact>
+                        <additionalparam>-views -all</additionalparam>
+                        <useStandardDocletOptions>true</useStandardDocletOptions>
                         <aggregate>true</aggregate>
                     </configuration>
                     <reportSets>
