replace codebase resolver implementation to rio - prototype

--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -47,7 +47,7 @@ com.sun.jini.start {
         ),
 
 	    new SorcerServiceDescriptor(
-	      	Booter.resolveCodebase("org.apache.river:reggie-dl"),
+	      	Booter.resolveCodebase2("org.apache.river:reggie-dl"),
             policy,
             Booter.resolveClasspath("org.apache.river:reggie"),
             "com.sun.jini.reggie.TransientRegistrarImpl",
@@ -55,7 +55,7 @@ com.sun.jini.start {
         ),
             
 		new SorcerServiceDescriptor(
-            Booter.resolveCodebase("org.apache.river:mahalo-dl"),
+            Booter.resolveCodebase2("org.apache.river:mahalo-dl"),
             policy,
             Booter.resolveClasspath("org.apache.river:mahalo"),
             "com.sun.jini.mahalo.TransientMahaloImpl",
@@ -63,7 +63,7 @@ com.sun.jini.start {
         ),
 
         new SorcerServiceDescriptor(
-            Booter.resolveCodebase("org.apache.river:fiddler-dl"),
+            Booter.resolveCodebase2("org.apache.river:fiddler-dl"),
             policy,
             Booter.resolveClasspath("org.apache.river:fiddler"),
             "com.sun.jini.fiddler.TransientFiddlerImpl",
@@ -71,7 +71,7 @@ com.sun.jini.start {
         ),
 
         new SorcerServiceDescriptor(
-            Booter.resolveCodebase("org.apache.river:mercury-dl"),
+            Booter.resolveCodebase2("org.apache.river:mercury-dl"),
             policy,
             Booter.resolveClasspath("org.apache.river:mercury"),
             "com.sun.jini.mercury.TransientMercuryImpl",
@@ -80,7 +80,7 @@ com.sun.jini.start {
 
 
         new SorcerServiceDescriptor(
-            Booter.resolveCodebase("org.apache.river:norm-dl"),
+            Booter.resolveCodebase2("org.apache.river:norm-dl"),
             policy,
             Booter.resolveClasspath("org.apache.river:norm"),
             "com.sun.jini.norm.TransientNormServerImpl",
@@ -206,12 +206,7 @@ com.sun.jini.start {
 
         // SORCER Database Store Service
         new SorcerServiceDescriptor(
-            Booter.resolveCodebase(new String[]{
-				"org.sorcersoft.sorcer:sorcer-api",
-				"org.sorcersoft.sorcer:dbp-api",
-				"org.sorcersoft.sorcer:sos-exertlet-sui",
-				"org.sorcersoft.sorcer:sos-netlet"
-			}),
+            Booter.resolveCodebase2("org.sorcersoft.sorcer:dbp-api"),
             policy,
             Booter.resolveClasspath(new String[]{
                 "org.sorcersoft.sorcer:commons-prv",
