--- a/examples/ex5/ex5-cfg-adder/pom.xml
+++ b/examples/ex5/ex5-cfg-adder/pom.xml
@@ -9,8 +9,8 @@
         <version>1.0-M3-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ex5-cfg2</artifactId>
-    <name>SORCER :: examples :: ex5 :: config2</name>
+    <artifactId>ex5-cfg-adder</artifactId>
+    <name>SORCER :: examples :: ex5 :: adder config</name>
 
     <dependencies>
         <dependency>
@@ -39,8 +39,8 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <OAR-OperationalString>Ex5DividerBoot.groovy</OAR-OperationalString>
-                            <OAR-Name>Ex5Divider</OAR-Name>
+                            <OAR-OperationalString>Ex5AdderBoot.groovy</OAR-OperationalString>
+                            <OAR-Name>Ex5AdderBoot</OAR-Name>
                             <OAR-Version>${project.version}</OAR-Version>
                             <OAR-Activation>Automatic</OAR-Activation>
                         </manifestEntries>
