--- a/examples/ex5/ex5-cfg-all/pom.xml
+++ b/examples/ex5/ex5-cfg-all/pom.xml
@@ -9,8 +9,8 @@
         <version>1.0-M3-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ex5-cfg3</artifactId>
-    <name>SORCER :: examples :: ex5 :: config3</name>
+    <artifactId>ex5-cfg-all</artifactId>
+    <name>SORCER :: examples :: ex5 :: all config</name>
 
     <dependencies>
         <dependency>
@@ -39,8 +39,8 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <OAR-OperationalString>Ex5MultiplierBoot.groovy</OAR-OperationalString>
-                            <OAR-Name>Ex5Multiplier</OAR-Name>
+                            <OAR-OperationalString>AllEx5Boot.groovy</OAR-OperationalString>
+                            <OAR-Name>Ex5AllBoot</OAR-Name>
                             <OAR-Version>${project.version}</OAR-Version>
                             <OAR-Activation>Automatic</OAR-Activation>
                         </manifestEntries>
