--- a/examples/ex5/ex5-cfg-subtractor/pom.xml
+++ b/examples/ex5/ex5-cfg-subtractor/pom.xml
@@ -9,8 +9,8 @@
         <version>1.0-M3-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ex5-cfg1</artifactId>
-    <name>SORCER :: examples :: ex5 :: config1</name>
+    <artifactId>ex5-cfg-subtractor</artifactId>
+    <name>SORCER :: examples :: ex5 :: subtractor config</name>
 
     <dependencies>
         <dependency>
@@ -39,7 +39,7 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <OAR-OperationalString>Ex5AdderBoot.groovy</OAR-OperationalString>
+                            <OAR-OperationalString>Ex5SubtractorBoot.groovy</OAR-OperationalString>
                             <OAR-Name>Ex5AdderBoot</OAR-Name>
                             <OAR-Version>${project.version}</OAR-Version>
                             <OAR-Activation>Automatic</OAR-Activation>
