--- a/examples/ex6/ex6-cfg-divider/pom.xml
+++ b/examples/ex6/ex6-cfg-divider/pom.xml
@@ -9,8 +9,8 @@
         <version>1.0-M3-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ex6-cfg4</artifactId>
-    <name>SORCER :: examples :: ex6 :: config1</name>
+    <artifactId>ex6-cfg-divider</artifactId>
+    <name>SORCER :: examples :: ex6 :: divider config</name>
 
     <dependencies>
         <dependency>
@@ -39,8 +39,8 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <OAR-OperationalString>Ex6SubtractorBoot.groovy</OAR-OperationalString>
-                            <OAR-Name>Ex6SubtractorBoot</OAR-Name>
+                            <OAR-OperationalString>Ex6DividerBoot.groovy</OAR-OperationalString>
+                            <OAR-Name>ex6Divider</OAR-Name>
                             <OAR-Version>${project.version}</OAR-Version>
                             <OAR-Activation>Automatic</OAR-Activation>
                         </manifestEntries>
